# pdf

./: .gitignore  .gitmodules  .markdownlint-cli2.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  ChunkErrorBoundary.tsx  Menu.tsx  PageFurnitureDialog.tsx  RestrictDialog.tsx  ShareDialog.tsx  SignDialog.tsx  SignatureInfoDialog.tsx  desk-bridge-bootstrap.ts  main.tsx  neobrutal.css  recovery.ts  styles.css  vite-env.d.ts
crates/casual-pdf-core/: Cargo.toml
crates/casual-pdf-core/examples/: edit_text.rs  redact_page.rs  render_page.rs
crates/casual-pdf-core/src/: lib.rs  redact.rs  restrict.rs  sign.rs  textedit.rs
docs/: AI.md  ARCHITECTURE.md  BENCHMARK.md  FEATURES.md  OVERVIEW.md  RESEARCH.md  ROADMAP.md  TEXT-EDITING.md
scripts/: check-links.sh
tools/: build-core-wasm.sh
tools/brand/: gen-icons.mjs  package-lock.json  package.json
tools/render-parity/: README.md  compare.mjs  extract-text.py  gen-fixture.mjs  make-geom-fixture.mjs  make-pii-fixture.mjs  package-lock.json  package.json  render-web.mjs  run.sh  serve.mjs  verify-ai-engine.test.ts  verify-ai-highlight.mjs  verify-ai-panel.mjs  verify-ai-redact.mjs  verify-ai-summarize.mjs  verify-collab-2client.mjs  verify-collab-binding.test.ts  verify-collab-forms.mjs  verify-collab-share.mjs  verify-collab-signing.mjs  verify-comments-ui.mjs  verify-comments.test.ts  verify-drive.mjs  verify-edit-font-sub.mjs  verify-edit-ui.mjs  verify-form-binding.test.ts  verify-mcp-stdio.mjs  verify-mcp.test.ts  verify-merge.mjs  verify-redact-cover-ui.mjs  verify-redact-cover.mjs  verify-redact-geom.mjs  verify-redact-split.mjs  verify-redact-text.mjs  verify-redact-xobject.mjs  verify-restrict.mjs  verify-search-after-textedit.mjs  verify-signature-details.mjs  verify-signature-openssl.mjs  (+11 more)
tools/render-parity/fixtures/: test-signer.p12
